made the changes