@@ -3,15 +3,17 @@ package com.example.demo.security;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.web.AuthenticationEntryPoint;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfigurationSource;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
@@ -24,54 +26,77 @@ public class SecurityConfig {
     @Autowired
     private JwtAuthFilter jwtAuthFilter;
 
+
+    // SIMPLE ENTRYPOINT — NO EXTRA CLASS NEEDED
+    private final AuthenticationEntryPoint authEntryPoint = (req, res, ex) -> {
+        res.setStatus(401);
+        res.setContentType("application/json");
+        res.getWriter().write("{\"message\":\"Unauthorized\"}");
+    };
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         http
                 .csrf(csrf -> csrf.disable())
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // ✔ enable CORS
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .formLogin(form -> form.disable())
                 .httpBasic(basic -> basic.disable())
 
+                .exceptionHandling(ex -> ex.authenticationEntryPoint(authEntryPoint))
+
                 .authorizeHttpRequests(auth -> auth
+
                         .requestMatchers(
                                 "/v3/api-docs/**",
                                 "/swagger-ui/**",
                                 "/swagger-ui.html",
-                                "/error",                // ✔ allow error endpoint
-                                "/api/register",         // ✔ allow register
-                                "/api/login",            // ✔ allow login
-                                "/api/verifyWithOtp",    // ✔ allow OTP
-                                "/api/getImage",
-                                "/api/getProduct",
+                                "/error",
+                                "/api/register",
+                                "/api/login",
+                                "/api/verifyWithOtp",
                                 "/api/forgotPassword",
                                 "/api/resetPassword",
                                 "/api/resendOtp",
-                                "/api/deleteUser/**"
+                                "/api/getAllProducts",
+                                "/api/getProduct",
+                                "/api/getImage"
                         ).permitAll()
-                        .requestMatchers("/auth/**").permitAll()
-                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()  // ✔ allow OPTIONS preflight
+                        .requestMatchers("/api/admin/**").hasAuthority("ADMIN")
+
+
+                        // allow frontend preflight
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+
+                        // customer protected
+                        .requestMatchers("/api/cart/**").hasAuthority("CUSTOMER")
+
                         .anyRequest().authenticated()
                 )
 
+                // Add JWT filter
                 .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
 
+                // stateless
                 .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
 
         return http.build();
     }
 
-    // ✔ GLOBAL CORS CONFIGURATION
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
 
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList(
+        config.setAllowedOrigins(List.of(
                 "http://localhost:5173",
                 "http://localhost:3000"
         ));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
+
+        // Must expose Authorization so frontend reads token if needed
+        config.setExposedHeaders(List.of("Authorization"));
+
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
